; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/ux500/extr_clk-sysctrl.c_clk_reg_sysctrl_gate_fixed_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/ux500/extr_clk-sysctrl.c_clk_reg_sysctrl_gate_fixed_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }
%struct.device = type { i32 }

@clk_sysctrl_gate_fixed_rate_ops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.clk* @clk_reg_sysctrl_gate_fixed_rate(%struct.device* %0, i8* %1, i8* %2, i32 %3, i32 %4, i32 %5, i64 %6, i64 %7, i64 %8) #0 {
  %10 = alloca %struct.device*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i8**, align 8
  %20 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %10, align 8
  store i8* %1, i8** %11, align 8
  store i8* %2, i8** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i64 %6, i64* %16, align 8
  store i64 %7, i64* %17, align 8
  store i64 %8, i64* %18, align 8
  %21 = load i8*, i8** %12, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %9
  br label %25

24:                                               ; preds = %9
  br label %25

25:                                               ; preds = %24, %23
  %26 = phi i8** [ %12, %23 ], [ null, %24 ]
  store i8** %26, i8*** %19, align 8
  %27 = load i8*, i8** %12, align 8
  %28 = icmp ne i8* %27, null
  %29 = zext i1 %28 to i64
  %30 = select i1 %28, i32 1, i32 0
  store i32 %30, i32* %20, align 4
  %31 = load %struct.device*, %struct.device** %10, align 8
  %32 = load i8*, i8** %11, align 8
  %33 = load i8**, i8*** %19, align 8
  %34 = load i32, i32* %20, align 4
  %35 = load i64, i64* %16, align 8
  %36 = load i64, i64* %17, align 8
  %37 = load i64, i64* %18, align 8
  %38 = call %struct.clk* @clk_reg_sysctrl(%struct.device* %31, i8* %32, i8** %33, i32 %34, i32* %13, i32* %14, i32* %15, i64 %35, i64 %36, i64 %37, i32* @clk_sysctrl_gate_fixed_rate_ops)
  ret %struct.clk* %38
}

declare dso_local %struct.clk* @clk_reg_sysctrl(%struct.device*, i8*, i8**, i32, i32*, i32*, i32*, i64, i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
